--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -8,16 +8,17 @@
 <!DOCTYPE html
         PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml"
+    <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head>
     <title>Doodle</title>
+    <link rel="stylesheet" href="css/tail.css" />
+    <link rel="stylesheet" href="css/wind.css" />
 </h:head>
 
-<h:body>
-
+<h:body class="bg-slate-600">
+        <p class="text-white">HI :)</p>
 </h:body>
 
 </html>
