--- a/src/main/webapp/add.xhtml
+++ b/src/main/webapp/add.xhtml
@@ -21,45 +21,55 @@
 </h:head>
 
 <h:body>
-   <h1 class="text-2xl font-bold mb-4">Add Reservation</h1>
-
-   <h:form class="max-w-md">
-      <div class="mb-4">
-         <h:outputLabel for="date" value="Date: " class="block font-bold" />
-         <h:inputText id="date" value="#{reservationBean.date}" class="w-full px-4 py-2 border border-gray-300 rounded" />
+   <div class="lg:grid lg:min-h-screen lg:grid-cols-12">
+      <div class="relative block h-16 lg:order-last lg:col-span-5 lg:h-full xl:col-span-3">
+         <img alt="Pattern" src="img/bene.png" class="absolute inset-0 h-full w-full object-cover"/>
       </div>
+   <div class="lg:col-span-6 xl:col-span-8 mb-8">
+      <h1 class="text-2xl font-bold mb-4">Add Reservation</h1>
 
-      <div class="mb-4">
-         <h:outputLabel for="from" value="From: " class="block font-bold" />
-         <h:inputText id="from" value="#{reservationBean.from}" class="w-full px-4 py-2 border border-gray-300 rounded" />
-      </div>
+      <h:form class="max-w-md">
+         <div class="mb-4">
+            <h:outputLabel for="date" value="Date: " class="block font-bold" />
+            <h:inputText id="date" value="#{reservationBean.info.date}" class="w-full px-4 py-2 border border-gray-300 rounded"/>
+         </div>
 
-      <div class="mb-4">
-         <h:outputLabel for="to" value="To: " class="block font-bold" />
-         <h:inputText id="to" value="#{reservationBean.to}" class="w-full px-4 py-2 border border-gray-300 rounded" />
-      </div>
+         <div class="mb-4">
+            <h:outputLabel for="from" value="From: " class="block font-bold" />
+            <h:inputText id="from" value="#{reservationBean.info.from}" type="time" class="w-full px-4 py-2 border border-gray-300 rounded" />
+         </div>
 
-      <div class="mb-4">
-         <h:outputLabel for="room" value="Room: " class="block font-bold" />
-         <h:selectOneListbox id="room" class="w-full px-4 py-2 border border-gray-300 rounded">
-            <f:selectItems value="#{reservationBean.rooms}" />
-         </h:selectOneListbox>
-      </div>
 
-      <div class="mb-4">
-         <h:outputLabel for="comment" value="Comment: " class="block font-bold" />
-         <h:inputTextarea id="comment" value="#{reservationBean.comment}" class="w-full px-4 py-2 border border-gray-300 rounded" />
-      </div>
+         <div class="mb-4">
+            <h:outputLabel for="to" value="To: " class="block font-bold" />
+            <h:inputText id="to" value="#{reservationBean.info.to}" type="time" class="w-full px-4 py-2 border border-gray-300 rounded" />
+         </div>
 
-      <div class="mb-4">
-         <h:outputLabel for="participants" value="Participants: " class="block font-bold" />
-         <h:selectManyListbox id="participants" value="#{reservationBean.participants}" class="w-full px-4 py-2 border border-gray-300 rounded">
-            <f:selectItems value="#{reservationBean.participants}" />
-         </h:selectManyListbox>
-      </div>
+         <div class="mb-4">
+            <h:outputLabel for="room" value="Room: " class="block font-bold" />
+            <h:selectOneListbox id="room" class="w-full px-4 py-2 border border-gray-300 rounded">
+               <f:selectItems value="#{reservationBean.info.rooms}" />
+            </h:selectOneListbox>
+         </div>
 
-      <h:commandButton value="Submit" action="#{reservationBean.submit()}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" />
-   </h:form>
+         <div class="mb-4">
+            <h:outputLabel for="participants" value="Participants: " class="block font-bold" />
+            <h:selectManyListbox id="participants" value="#{reservationBean.info.participants}" class="w-full px-4 py-2 border border-gray-300 rounded">
+               <f:selectItems value="#{reservationBean.info.participants}" />
+            </h:selectManyListbox>
+         </div>
+
+         <div class="mb-4">
+            <h:outputLabel for="comment" value="Comment: " class="block font-bold" />
+            <h:inputTextarea id="comment" value="#{reservationBean.info.comment}" class="w-full px-4 py-2 border border-gray-300 rounded" />
+         </div>
+
+
+
+         <h:commandButton value="Submit" id="submit" action="#{reservationBean.submit()}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" />
+      </h:form>
+   </div>
+   </div>
 
 </h:body>
 
