tailwind output in gitignore

--- a/src/main/webapp/add.xhtml
+++ b/src/main/webapp/add.xhtml
@@ -15,8 +15,8 @@
 >
 
 <h:head>
-   <link rel="stylesheet" href="css/tail.css" />
-   <link rel="stylesheet" href="css/wind.css" />
+   <link rel="stylesheet" href="css/tail-wind.css" />
+   <link rel="stylesheet" href="css/tailwind.css" />
    <title>Add Reservation - Doodle</title>
 </h:head>
 
