--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -12,12 +12,12 @@
         xmlns="http://www.w3.org/1999/xhtml"
         xmlns:h="http://java.sun.com/jsf/html"
         xmlns:ui="http://java.sun.com/jsf/facelets"
-        xmlns:f="http://java.sun.com/jsf/core" xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
+        xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
 >
 <h:head>
     <title>Doodle</title>
-    <link rel="stylesheet" href="css/tail.css" />
-    <link rel="stylesheet" href="css/wind.css" />
+    <link rel="stylesheet" href="css/tail-wind.css" />
+    <link rel="stylesheet" href="css/tailwind.css" />
 </h:head>
 
 <h:body class="bg-gray-900">
