view returns null

--- a/src/main/webapp/add.xhtml
+++ b/src/main/webapp/add.xhtml
@@ -5,14 +5,9 @@
   Date: 14.05.23
   Time: 14:47
 -->
-<!DOCTYPE html
-        PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-        xmlns:f="http://java.sun.com/jsf/core"
->
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core">
 
 <h:head>
    <link rel="stylesheet" href="css/tail-wind.css" />
@@ -29,49 +24,40 @@
          <div class="max-w-xl lg:max-w-4xl">
             <h:link outcome="index" class="block text-blue-600">← Back</h:link>
             <h1 class="mt-6 text-2xl font-bold text-white sm:text-3xl md:text-4xl">Add Reservation</h1>
-            <p class="text-xl text-gray-400 max-w-3xl">Add a new reservation for a room.</p>
             <h:form class="max-w-xl">
                <div class="col-span-6 sm:col-span-4 my-1 mt-4">
                   <h:outputLabel for="date" value="Date: " class="block text-gray-300  text-sm font-bold mb-2" />
                   <h:inputText id="date" value="#{reservationBean.info.date}" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white"/>
                </div>
-
                <div class="col-span-6 sm:col-span-4 my-1">
                   <h:outputLabel for="from" value="From: " class="block text-gray-300  text-sm font-bold mb-2" />
                   <h:inputText id="from" value="#{reservationBean.info.from}" type="time" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white" />
                </div>
-
-
                <div class="col-span-6 sm:col-span-4 my-1">
                   <h:outputLabel for="to" value="To: " class="block text-gray-300  text-sm font-bold mb-2" />
                   <h:inputText id="to" value="#{reservationBean.info.to}" type="time" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white" />
                </div>
-
                <div class="col-span-6 sm:col-span-4 my-1">
                   <h:outputLabel for="room" value="Room: " class="block text-gray-300  text-sm font-bold mb-2" />
                   <h:selectOneListbox id="room" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white">
                      <f:selectItems value="#{reservationBean.info.rooms}" />
                   </h:selectOneListbox>
                </div>
-
                <div class="col-span-6 sm:col-span-4 my-1">
                   <h:outputLabel for="participants" value="Participants: " class="block text-gray-300  text-sm font-bold mb-2" />
                   <h:selectManyListbox id="participants" value="#{reservationBean.info.participants}" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white">
                      <f:selectItems value="#{reservationBean.info.participants}" />
                   </h:selectManyListbox>
                </div>
-
                <div class="col-span-6 sm:col-span-4 my-1 my-2">
                   <h:outputLabel for="comment" value="Comment: " class="block text-gray-300  text-sm font-bold mb-2" />
                   <h:inputTextarea id="comment" value="#{reservationBean.info.comment}" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white" />
                </div>
-               
                <h:commandButton value="Submit" id="submit" action="#{reservationBean.submit()}" class="my-4 inline-block shrink-0 h-12 rounded-md border border-blue-600 bg-blue-600 px-12 py-3 text-sm font-medium text-white transition hover:bg-transparent focus:outline-none focus:ring active:text-blue-500 hover:bg-blue-700 hover:text-white w-1/2" />
             </h:form>
          </div>
       </div>
    </div>
-
 </h:body>
 
 </html>
