--- a/src/main/webapp/invite.xhtml
+++ b/src/main/webapp/invite.xhtml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-    <h:outputLabel value="Hello, world"/>
-</f:view>
+<!--
+  Created by IntelliJ IDEA.
+  User: lukaswigger
+  Date: 14.05.23
+  Time: 14:47
+-->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html">
+
+<h:head>
+    <link rel="stylesheet" href="css/tail-wind.css" />
+    <link rel="stylesheet" href="css/tailwind.css" />
+    <title>Invite Reservation - Doodle</title>
+</h:head>
+
+<h:body class="bg-gray-900">
+
+</h:body>
+
 </html>
