--- a/src/main/webapp/view.xhtml
+++ b/src/main/webapp/view.xhtml
@@ -12,6 +12,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
+      xmlns:c="http://java.sun.com/jstl/core"
 >
 
 <h:head>
@@ -27,28 +28,27 @@
         </div>
         <div class="px-8 py-8 sm:px-12 lg:col-span-7 lg:py-12 lg:px-16 xl:col-span-9">
             <div class="max-w-xl lg:max-w-4xl">
-                <h:panelGroup rendered="#{not empty reservationBean.getCollectionByPublicID(param['id'])}" var="reservation">
-                    <h:link outcome="index" class="block text-blue-600">← Back</h:link>
-                    <h1 class="mt-6 text-2xl font-bold text-white sm:text-3xl md:text-4xl">View Reservation</h1>
-                    <div class="col-span-6 sm:col-span-4 my-1 mt-4">
-                        <h:outputText value="Date: #{reservation.date != null ? reservation.date : 'No date defined'}" class="block text-gray-300 text-sm font-bold mb-2" />
-                    </div>
-                    <div class="col-span-6 sm:col-span-4 my-1">
-                        <h:outputText value="From: #{reservation.from != null ? reservation.from : 'No from defined'}" class="block text-gray-300 text-sm font-bold mb-2" />
-                    </div>
-                    <div class="col-span-6 sm:col-span-4 my-1">
-                        <h:outputText value="To: #{reservation.to != null ? reservation.to : 'No to defined'}" class="block text-gray-300 text-sm font-bold mb-2" />
-                    </div>
-                    <div class="col-span-6 sm:col-span-4 my-1">
-                        <h:outputText value="Room: #{reservation.rooms != null ? fn:substring(reservation.rooms, 1, fn:length(reservation.rooms) - 1) : 'No rooms defined'}" class="block text-gray-300 text-sm font-bold mb-2" />
-                    </div>
-                    <div class="col-span-6 sm:col-span-4 my-1">
-                        <h:outputText value="Participants: #{reservation.participants != null ? fn:substring(reservation.participants, 1, fn:length(reservation.participants) - 1) : 'No participants defined'}" class="block text-gray-300 text-sm font-bold mb-2" />
-                    </div>
-                    <div class="col-span-6 sm:col-span-4 my-1 my-2">
-                        <h:outputText value="Comment: #{reservation.comment != null ? reservation.comment : 'No comment available'}" class="block text-gray-300 text-sm font-bold mb-2" />
-                    </div>
-                </h:panelGroup>
+                <c:set var="reservation" value="#{reservationBean.getCollectionByPublicID(param['id'])}"/>
+                <h:link outcome="index" class="block text-blue-600">← Back</h:link>
+                <h1 class="mt-6 text-2xl font-bold text-white sm:text-3xl md:text-4xl">View Reservation</h1>
+                <div class="col-span-6 sm:col-span-4 my-1 mt-4">
+                    <h:outputText value="Date: #{reservation.date != null ? reservation.date : 'No date defined'}" class="block text-gray-300 text-sm font-bold mb-2" />
+                </div>
+                <div class="col-span-6 sm:col-span-4 my-1">
+                    <h:outputText value="From: #{reservation.from != null ? reservation.from : 'No from defined'}" class="block text-gray-300 text-sm font-bold mb-2" />
+                </div>
+                <div class="col-span-6 sm:col-span-4 my-1">
+                    <h:outputText value="To: #{reservation.to != null ? reservation.to : 'No to defined'}" class="block text-gray-300 text-sm font-bold mb-2" />
+                </div>
+                <div class="col-span-6 sm:col-span-4 my-1">
+                    <h:outputText value="Room: #{reservation.room != null ? reservation.room : 'No rooms defined'}" class="block text-gray-300 text-sm font-bold mb-2" />
+                </div>
+                <div class="col-span-6 sm:col-span-4 my-1">
+                    <h:outputText value="Participants: #{reservation.participants != null ? fn:substring(reservation.participants.toString(), 1, fn:length(reservation.participants.toString()) - 1) : 'No participants defined'}" class="block text-gray-300 text-sm font-bold mb-2" />
+                </div>
+                <div class="col-span-6 sm:col-span-4 my-1 my-2">
+                    <h:outputText value="Comment: #{reservation.comment != null ? reservation.comment : 'No comment available'}" class="block text-gray-300 text-sm font-bold mb-2" />
+                </div>
                 <h:panelGroup rendered="#{empty param['id']}">
                     <h:link outcome="index" class="block text-blue-600">← Back</h:link>
                     <h1 class="mt-6 text-2xl font-bold text-white sm:text-3xl md:text-4xl">View Reservation</h1>
