--- a/src/main/webapp/edit.xhtml
+++ b/src/main/webapp/edit.xhtml
@@ -16,7 +16,6 @@
 </h:head>
 <h:body class="bg-gray-900">
         <h:form class="max-w-xl">
-
             <h:link outcome="index" class="block text-blue-600">← Back</h:link>
             <h1 class="mt-6 text-2xl font-bold text-white sm:text-3xl md:text-4xl">Edit Reservation</h1>
             <div class="col-span-6 sm:col-span-4 my-1 mt-4">
@@ -40,7 +39,7 @@
             <div class="col-span-6 sm:col-span-4 my-1">
                 <h:outputLabel for="participants" value="Participants: " class="block text-gray-300  text-sm font-bold mb-2" />
                 <h:selectManyListbox id="participants" value="#{reservationBean.info.participants}" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white">
-                    <f:selectItems value="#{reservationBean.info.participants}" />
+                    <f:selectItems value="#{reservationBean.allParticipants}" />
                 </h:selectManyListbox>
             </div>
             <div class="col-span-6 sm:col-span-4 my-1 my-2">
