--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -21,7 +21,9 @@
             <caption class="p-5 text-lg font-semibold text-left bg-gray-800 text-white">
                 <div class="flex justify-between items-center">
                     <span class="text-3xl">Room reservations</span>
-                    <h:link outcome="add" class="my-4 shrink-0 h-12 rounded-md border border-blue-600 bg-blue-600 px-12 py-3 text-sm font-medium text-white transition hover:bg-transparent focus:outline-none focus:ring active:text-blue-500 hover:bg-blue-700 hover:text-white w-52 items-end" style="width: 215px;">Add reservation</h:link>
+                    <h:form>
+                        <h:commandLink  action="#{reservationBean.add()}" class="my-4 shrink-0 h-12 rounded-md border border-blue-600 bg-blue-600 px-12 py-3 text-sm font-medium text-white transition hover:bg-transparent focus:outline-none focus:ring active:text-blue-500 hover:bg-blue-700 hover:text-white w-52 items-end" style="width: 215px;">Add reservation</h:commandLink>
+                    </h:form>
                 </div>
             </caption>
             <thead class="text-xs uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
